--- a/pageRealSLanding/index.html
+++ b/pageRealSLanding/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <div class="hero">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
 </body>
 </html>
