--- a/pageRealSLanding/index.html
+++ b/pageRealSLanding/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>Real State</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -12,6 +12,12 @@
         <div></div>
         <div></div>
         <div></div>
+        <div class="hero-logo">
+            <img src="img/logo-frame.svg" alt="logo imperialState">
+        </div>
+        <a href="#" class="hero-down">
+            <img src="img/down.svg" alt="flecha abajo">
+        </a>
     </div>
 </body>
 </html>
