Se agrega funcionalidad con jquery para transparencia en menu superior

--- a/pageRealSLanding/index.html
+++ b/pageRealSLanding/index.html
@@ -6,8 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real State</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/jquery-3.4.1.min.js" ></script>
+    <script src="js/main.js"></script>
 </head>
 <body>
+    <header class="transparente">
+        <img src="img/logo.svg" alt="logo imperialState">
+        <nav>
+            <a class="activo" href="#">Inicio</a>
+            <a href="#">Venta</a>
+            <a href="#">Alquiler</a>
+            <a href="#">Contacto</a>
+        </nav>
+    </header>
     <div class="hero">
         <div></div>
         <div></div>
@@ -18,6 +29,9 @@
         <a href="#" class="hero-down">
             <img src="img/down.svg" alt="flecha abajo">
         </a>
+    </div>
+    <div class="primera" id="pr">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas, ea amet. Velit temporibus reiciendis nihil libero repellat, obcaecati quasi modi quis. Sapiente voluptatibus iusto laboriosam dolores veritatis odio quae repellat, excepturi sequi numquam eos eius nobis! Non autem laboriosam repudiandae debitis deserunt enim dolor expedita ea facere quo, harum saepe nesciunt, labore officiis consequatur blanditiis unde assumenda. Reiciendis eaque iste quae ut? Mollitia deleniti ut ex quam, totam quasi cupiditate omnis laudantium eaque expedita unde sapiente? Enim, atque necessitatibus numquam accusamus ratione ipsa, consectetur libero voluptatum inventore eum reiciendis dolorum reprehenderit commodi minus aut dolor illo ab blanditiis eligendi. Iure corrupti vitae ipsum iusto sequi consequatur ullam inventore amet! Vero minus, minima alias consequatur quos illum eveniet doloribus explicabo. Sunt aut aliquam eligendi voluptates, cum magnam voluptatem alias odio tempore saepe porro in omnis consectetur autem error quisquam temporibus deleniti cupiditate, sapiente modi vitae repellendus, quasi sit! Quisquam quae placeat doloremque ipsum laudantium rerum cupiditate maiores soluta fuga quia veritatis aliquam, doloribus sit totam deserunt eum consectetur, animi minima excepturi reprehenderit voluptate, ducimus itaque. Repellendus officia odio quae numquam delectus officiis nulla dolorem animi voluptatibus ea voluptatum doloribus labore sint cum placeat, dolorum maiores laborum quaerat, facilis, unde dignissimos laboriosam optio suscipit. Sunt quo amet suscipit mollitia fugiat iste autem, minima molestiae, corporis, deserunt excepturi obcaecati rerum corrupti repellendus deleniti. Repellendus sit, pariatur voluptatum dignissimos repudiandae numquam cumque sint unde mollitia? Saepe animi rem et voluptatem deserunt, impedit voluptates ad vitae pariatur quasi autem laboriosam. Et cupiditate illum iure, quia nulla impedit dicta. Eveniet a alias iure libero asperiores, repellendus, fugit similique ipsam quo aperiam sunt nesciunt veniam doloribus nobis inventore odio velit accusamus. Facere natus eius quibusdam, culpa nihil, aut consequuntur incidunt fuga fugit quos adipisci, aperiam animi quia a explicabo libero ex dignissimos exercitationem labore nesciunt. At quibusdam pariatur, eveniet rem numquam magni laboriosam eos blanditiis perferendis quis dolores vero eligendi deleniti dolore quia ex reprehenderit commodi sed, delectus quidem ducimus sequi omnis dolorum natus? Laborum veritatis consectetur consequuntur repudiandae minus nam libero dignissimos sequi aut, nobis nulla minima voluptatibus maxime quisquam saepe fugiat quo error velit qui, ipsum quas sunt ipsam. Magni laborum magnam, minima commodi est dicta explicabo! Tempore perferendis alias sunt distinctio eligendi omnis praesentium ad pariatur commodi, mollitia expedita, esse quam iste nihil perspiciatis dolor eius dignissimos officiis qui quia! Adipisci sequi delectus ipsam facere voluptates recusandae, numquam, neque sit, quam officiis reiciendis unde dolor illum asperiores deserunt amet ex odit fugit! Sunt, dolores illo molestiae in neque non cupiditate fugit consequatur aspernatur odio explicabo at, eum repellat nisi iusto suscipit culpa! Minus vel quo assumenda odio inventore repudiandae? Vero inventore debitis facere veritatis laboriosam asperiores magnam ullam minus modi? Omnis distinctio corrupti cumque, pariatur adipisci laboriosam architecto molestias suscipit labore quis reprehenderit temporibus ipsa laborum ducimus officiis voluptatibus commodi doloribus sunt optio, dolore error nostrum veniam numquam? Commodi ex dicta assumenda mollitia. Dolore distinctio minima hic ad exercitationem atque laudantium magnam, nostrum minus vel reiciendis sunt voluptas veritatis mollitia cum sed quam in molestiae voluptatem, sapiente ducimus. Nostrum adipisci similique quas repellat. Adipisci animi praesentium commodi vitae corrupti iste delectus nulla eos fugiat dolorum ipsam amet, natus suscipit est sequi temporibus atque voluptatum esse. Quidem voluptatem provident libero nam, optio quisquam quos dignissimos temporibus dolorum eveniet. Nam obcaecati dolore omnis minima aut aliquid modi. Consequuntur molestiae in quas qui libero neque laboriosam, quo nesciunt doloribus facere, consectetur natus suscipit molestias incidunt id itaque deserunt temporibus eum eaque inventore nemo? Molestias ea dolor, quia commodi voluptas quisquam sint reiciendis sequi possimus amet vero quos eligendi minus incidunt placeat est delectus maxime voluptatibus tempora impedit.</p>
     </div>
 </body>
 </html>
