--- a/pageRealSLanding/index.html
+++ b/pageRealSLanding/index.html
@@ -26,7 +26,7 @@
         <div class="hero-logo">
             <img src="img/logo-frame.svg" alt="logo imperialState">
         </div>
-        <a href="#" class="hero-down">
+        <a href="#pr" class="hero-down">
             <img src="img/down.svg" alt="flecha abajo">
         </a>
     </div>
@@ -50,7 +50,8 @@
         <p class="copyright">&copy; ACME Inc</p>
     </div>
 
-    <div class="fila primera" id="pr">
+    <div class="fila primera" >
+        <span id="pr">&nbsp;</span>
         <div class="col-66">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At obcaecati itaque, iure doloribus eligendi dicta quasi? Dolorem natus nulla nesciunt tempora necessitatibus possimus minima praesentium!</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias qui porro consequuntur esse, veniam vel!</p>
@@ -68,5 +69,78 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam debitis non nesciunt libero quidem molestiae est incidunt dolore excepturi esse voluptate vitae consequatur soluta porro voluptates, commodi tenetur amet cupiditate ea perspiciatis earum facere. Fugiat.</p>
         </div>
     </div>
+    <div class="fila parallax" >
+        <div class="col-100" >
+            <p>Lorem ipsum dolor sit amet, ducimus.</p>
+        </div>
+    </div>
+    <div class="fila">
+        <div class="col-50 caja-nav flex-column-center">
+            <img src="img/comprar.svg" alt="">
+            <a href="#">VENTA</a>
+        </div>
+        <div class="col-50 caja-nav flex-column-center">
+            <img src="img/alquilar.svg" alt="">
+            <a href="#">ALQUILAR</a>
+        </div>
+    </div>
+    <div class="fila">
+        <div class="col-100 flex-column-center">
+            <p>
+                Déjanos tus datos de contacto y un asesor se comunicará contigo a la brevedad
+            </p>
+            <form class="contacto">
+                <div class="fila">
+                    <input class="usuario" type="text" placeholder="Nombre y apellidos">
+                </div>
+                <div class="fila">
+                    <input class="email" type="email" placeholder="Correo electronico">
+                </div>
+                <div class="fila flex-end">
+                    <button type="submit">Enviar</button>
+                </div>
+                <div class="fila">
+                    <input type="checkbox" name=""   id="condiciones">
+                    <label for="condiciones"> Acepto las condiciones legales.</label>
+                </div>
+            </form>
+        </div>
+    </div>
+    <footer class="fila">
+        <div class="col-33">
+            <p>Imperial Real State</p>
+            <p class="flex-start" >
+                <img class="m-r-small" src="img/map.svg" alt="Icono de mapa">
+                Paseo de la constitucion, 134
+            </p>
+            <p>37419 Leon, gto</p>
+            <p class="flex-start">
+               <img class="m-r-small" src="img/phone.svg" alt="Icono de telefono"> 
+               +524795668425
+            </p>
+            <p class="flex-start">
+                <img class="m-r-small" src="img/mail.svg" alt="Icono del email">
+                info@imperial.com
+            </p>
+            
+        </div>
+        <div class="col-33">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3721.8406234035624!2d-101.67463602394368!3d21.118919284674146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842bbf07e6fd0dd3%3A0x4b283e8a5a970638!2sArco%20Triunfal%20de%20la%20Calzada%20de%20los%20H%C3%A9roes!5e0!3m2!1ses-419!2smx!4v1688104684833!5m2!1ses-419!2smx" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="col-33">
+            <div class="flex-around">
+                <img class="redes"  src="img/facebook.svg" alt="icono de fb">
+                <img class="redes"  src="img/twitter.svg" alt="icono de twitter">
+                <img class="redes"  src="img/whatsapp.svg" alt="icono de wa">
+                <img class="redes"  src="img/instagram.svg" alt="icono de ig">
+            </div>
+            <div class="flex-around m-t">
+                <a href="#">Aviso legal</a>
+                <a href="#">Politica de cookies</a>
+                
+            </div>
+            <p class="copyright m-t">&copy; Imperial Real State All rights reserved</p>
+        </div>
+    </footer>
 </body>
 </html>
