--- a/pageRealSLanding/index.html
+++ b/pageRealSLanding/index.html
@@ -11,12 +11,13 @@
 </head>
 <body>
     <header class="transparente">
-        <img src="img/logo.svg" alt="logo imperialState">
+        <a href="/index.html"><img src="img/logo.svg" alt="logo imperialState"></a>
+        
         <nav>
             <a class="activo" href="#">Inicio</a>
-            <a href="#">Venta</a>
+            <a href="/ventas.html">Ventas</a>
             <a href="#">Alquiler</a>
-            <a href="#">Contacto</a>
+            <a href="/contacto.html">Contacto</a>
         </nav>
     </header>
     <div class="hero">
@@ -41,7 +42,7 @@
         <nav>
             <a href="#">Inicio</a>
             <hr>
-            <a href="#">Venta</a>
+            <a href="/ventas.html">Ventas</a>
             <hr>
             <a href="#">Alquiler</a>
             <hr>
@@ -77,7 +78,7 @@
     <div class="fila">
         <div class="col-50 caja-nav flex-column-center">
             <img src="img/comprar.svg" alt="">
-            <a href="#">VENTA</a>
+            <a href="/ventas.html">VENTA</a>
         </div>
         <div class="col-50 caja-nav flex-column-center">
             <img src="img/alquilar.svg" alt="">
