pagina de contacto

--- a/pageRealSLanding/propiedad1.html
+++ b/pageRealSLanding/propiedad1.html
@@ -11,13 +11,15 @@
   </head>
   <body>
     <header>
-      <a href="/index.html"><img src="img/logo.svg" alt="logo imperialState" /></a>
-      
+      <a href="/index.html"
+        ><img src="img/logo.svg" alt="logo imperialState"
+      /></a>
+
       <nav>
         <a href="/index.html">Inicio</a>
         <a class="activo" href="/ventas.html">Ventas</a>
         <a href="#">Alquiler</a>
-        <a href="#">Contacto</a>
+        <a href="/contacto.html">Contacto</a>
       </nav>
     </header>
 
@@ -35,7 +37,7 @@
         <hr />
         <a href="#">Alquiler</a>
         <hr />
-        <a href="#">Contacto</a>
+        <a href="/contacto.html">Contacto</a>
       </nav>
       <p class="copyright">&copy; ACME Inc</p>
     </div>
@@ -77,20 +79,32 @@
     </div>
 
     <div class="fila">
-        <div class="col-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem aliquid nisi labore asperiores! Quia quos dolores perspiciatis vel voluptatum id modi sunt iusto ipsum recusandae, autem voluptatem minima deserunt placeat?
-        Illo id vel deserunt error ratione dolorum nulla nam aliquam deleniti laborum, officia autem cupiditate aspernatur iste, velit provident placeat exercitationem? Quam suscipit rerum iure officiis temporibus voluptatem nemo maxime.
-        </div>
-        <div class="col-50">
-            <img src="img/property2.jpg" alt="imagen de vivienda">
-        </div>
+      <div class="col-50">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem aliquid
+        nisi labore asperiores! Quia quos dolores perspiciatis vel voluptatum id
+        modi sunt iusto ipsum recusandae, autem voluptatem minima deserunt
+        placeat? Illo id vel deserunt error ratione dolorum nulla nam aliquam
+        deleniti laborum, officia autem cupiditate aspernatur iste, velit
+        provident placeat exercitationem? Quam suscipit rerum iure officiis
+        temporibus voluptatem nemo maxime.
+      </div>
+      <div class="col-50">
+        <img src="img/property2.jpg" alt="imagen de vivienda" />
+      </div>
     </div>
     <div class="fila">
-        <div class="col-50">
-            <img src="img/property3.jpg" alt="imagen de vivienda">
-        </div>
-        <div class="col-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem aliquid nisi labore asperiores! Quia quos dolores perspiciatis vel voluptatum id modi sunt iusto ipsum recusandae, autem voluptatem minima deserunt placeat?
-        Illo id vel deserunt error ratione dolorum nulla nam aliquam deleniti laborum, officia autem cupiditate aspernatur iste, velit provident placeat exercitationem? Quam suscipit rerum iure officiis temporibus voluptatem nemo maxime.
-        </div>
+      <div class="col-50">
+        <img src="img/property3.jpg" alt="imagen de vivienda" />
+      </div>
+      <div class="col-50">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem aliquid
+        nisi labore asperiores! Quia quos dolores perspiciatis vel voluptatum id
+        modi sunt iusto ipsum recusandae, autem voluptatem minima deserunt
+        placeat? Illo id vel deserunt error ratione dolorum nulla nam aliquam
+        deleniti laborum, officia autem cupiditate aspernatur iste, velit
+        provident placeat exercitationem? Quam suscipit rerum iure officiis
+        temporibus voluptatem nemo maxime.
+      </div>
     </div>
 
     <footer class="fila">
@@ -129,8 +143,8 @@
           <img class="redes" src="img/instagram.svg" alt="icono de ig" />
         </div>
         <div class="flex-around m-t">
-          <a href="#">Aviso legal</a>
-          <a href="#">Politica de cookies</a>
+          <a href="contacto.html#legal">Aviso legal</a>
+          <a href="contacto.html#cookies">Politica de cookies</a>
         </div>
         <p class="copyright m-t">
           &copy; Imperial Real State All rights reserved
