--- a/pageRealSLanding/ventas.html
+++ b/pageRealSLanding/ventas.html
@@ -37,7 +37,7 @@
         <hr />
         <a href="#">Alquiler</a>
         <hr />
-        <a href="#">Contacto</a>
+        <a href="/contacto.html">Contacto</a>
       </nav>
       <p class="copyright">&copy; ACME Inc</p>
     </div>
@@ -178,8 +178,8 @@
           <img class="redes" src="img/instagram.svg" alt="icono de ig" />
         </div>
         <div class="flex-around m-t">
-          <a href="#">Aviso legal</a>
-          <a href="#">Politica de cookies</a>
+          <a href="contacto.html#legal">Aviso legal</a>
+          <a href="contacto.html#cookies">Politica de cookies</a>
         </div>
         <p class="copyright m-t">
           &copy; Imperial Real State All rights reserved
