--- a/pageRealSLanding/contacto.html
+++ b/pageRealSLanding/contacto.html
@@ -40,7 +40,52 @@
       <p class="copyright">&copy; ACME Inc</p>
     </div>
 
-   
+    <div class="fila contacto">
+      <div class="col-100 flex-column-center">
+          <p>
+              Déjanos tus datos de contacto y un asesor se comunicará contigo a la brevedad
+          </p>
+          <form class="contacto">
+              <div class="fila">
+                  <input class="usuario" type="text" placeholder="Nombre y apellidos">
+              </div>
+              <div class="fila">
+                  <input class="email" type="email" placeholder="Correo electronico">
+              </div>
+              <div class="fila flex-end">
+                  <button type="submit">Enviar</button>
+              </div>
+              <div class="fila">
+                  <input type="checkbox" name=""   id="condiciones">
+                  <label for="condiciones"> Acepto las condiciones legales.</label>
+              </div>
+          </form>
+      </div>
+  </div>
+  <div class="fila">
+    <span id="legal">&nbsp;</span>
+    <div class="col-100">
+      <h1>Aviso Legal</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed commodi, nostrum maxime reiciendis dicta unde eum tempore quae doloremque perspiciatis.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed commodi, nostrum maxime reiciendis dicta unde eum tempore quae doloremque perspiciatis.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed commodi, nostrum maxime reiciendis dicta unde eum tempore quae doloremque perspiciatis.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed commodi, nostrum maxime reiciendis dicta unde eum tempore quae doloremque perspiciatis.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed commodi, nostrum maxime reiciendis dicta unde eum tempore quae doloremque perspiciatis.</p>
+    </div>
+  </div>
+  <div class="fila">
+    <span id="cookies">&nbsp;</span>
+    <div class="col-100">
+      <h1>Politica de cookies</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed commodi, nostrum maxime reiciendis dicta unde eum tempore quae doloremque perspiciatis.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed commodi, nostrum maxime reiciendis dicta unde eum tempore quae doloremque perspiciatis.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed commodi, nostrum maxime reiciendis dicta unde eum tempore quae doloremque perspiciatis.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed commodi, nostrum maxime reiciendis dicta unde eum tempore quae doloremque perspiciatis.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed commodi, nostrum maxime reiciendis dicta unde eum tempore quae doloremque perspiciatis.</p>
+    </div>
+  </div>
+
+
     <footer class="fila">
       <div class="col-33">
         <p>Imperial Real State</p>
